--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Poppins";
+  font-display: swap;
+  color: #000929;
+  background-color: #f7f7fd;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
